<?xml version="1.0" encoding="utf-8"?>

<!--
  screen_history.xml

  This file is part of FareBot.
  Learn more at: https://codebutler.github.io/farebot/

  Copyright (C) 2017 Eric Butler <eric@codebutler.com>

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/import_">
        <menu>
            <item android:id="@+id/import_file"
                  android:title="@string/import_file" />
            <item android:id="@+id/import_clipboard"
                android:title="@string/import_clipboard" />
        </menu>
    </item>
    <item android:title="@string/export_all">
        <menu>
            <item android:id="@+id/copy"
                  android:title="@string/copy" />
            <item android:id="@+id/share"
                  android:title="@string/share" />
            <item android:id="@+id/save"
                  android:title="@string/save" />
        </menu>
    </item>
</menu>
